parser/grammar.txt
Start -> Exprs ° Exprs , Exprs ' Exprs ° Exprs , Exprs '
Start ->

Exprs -> Expr2 Exprs
Exprs ->

Expr2 -> Expr1 Expr2R
Expr2R -> + Expr1 Expr2R
Expr2R -> - Expr1 Expr2R
Expr2R ->

Expr1 -> Expr Expr1R
Expr1R -> * Expr Expr1R
Expr1R -> / Expr Expr1R
Expr1R ->

Expr -> number
Expr -> ( Expr2 )
